# 115-MCP-Server

./: .env.example  .gitignore  115-MCP-Server.spec  LICENSE  README.md  pyproject.toml
packaging/: entrypoint.py
scripts/: build-exe.ps1  run-http.cmd  run-http.ps1  run-stdio.cmd  run-stdio.ps1
src/mcp_115_server/: config.py  server.py  service.py
tests/: test_service.py
